flux/infra/metallb/operator/operator/Service--metallb-operator-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metallb-operator-webhook-service
  namespace: metallb-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    control-plane: controller-manager
