flux/infra/metallb/operator/operator/Service--webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: metallb-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    component: webhook-server
